--- a/iesovsadapter-uat.yml
+++ b/iesovsadapter-uat.yml
@@ -1,6 +1,6 @@
-disUrl: https://b780e021-70dd-41f2-b320-c18a80b89fad.mock.pstmn.io/disService
-validationUrl: https://b780e021-70dd-41f2-b320-c18a80b89fad.mock.pstmn.io/validation
-
+disUrl: https://f196ca33-e05c-4f26-8052-2c72b25ecb0d.mock.pstmn.io/deviceinformationservice/api/v1/tenants
+validationUrl: https://f196ca33-e05c-4f26-8052-2c72b25ecb0d.mock.pstmn.io/validation
+jwtRetrievalUrl: https://f196ca33-e05c-4f26-8052-2c72b25ecb0d.mock.pstmn.io/validation
 Tenants_Configs:
   Tenant-1:
     validationRules:
@@ -22,3 +22,6 @@ Tenants_Configs:
         validator_9
     topics:
       - tenant-5
+
+
+disTenantId: tenant-40
